# genai

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
assignment1/: Assignment1.ipynb  README.md  main.py
assignment1/app/: embedding_model.py
assignment2/: Dockerfile  README.md  assignment2_3.ipynb  train.py
assignment2/app/: main.py
assignment2/model_cnn/: checkpoints.py  data_loader.py  model.py  test_model.py  trainer.py  utils.py
assignment2/results/: training_summary.json
assignment3/: Dockerfile  README.md  assignment3_3.html  assignment3_3.ipynb  train.py
assignment3/app/: main.py
assignment3/model_combined/: data_loader.py  evaluator.py  model.py  trainer.py  utils.py
assignment3/models/: best_discriminator.pth  best_generator.pth
assignment3/results/: training_log.csv
assignment4/: .gitignore  Dockerfile  README.md  assignment4.html  assignment4.ipynb  assignment4_3.html  assignment4_3.ipynb  generate.py  train_diffusion.py  train_ebm.py
assignment4/app/: main.py
assignment4/imgmodel/: data_loader.py  diffusion.py  ebm.py  model.py  trainer.py  utils.py
assignment4/models/: best_ebm.pth  final_ebm.pth
assignment4/results/: diffusion_training_log.csv  ebm_training_log.csv
helper_lib/: __init__.py  checkpoints.py  data_loader.py  evaluator.py  main.py  model.py  trainer.py  utils.py
homework/: Assignment1.ipynb
homework/app/: bigram_model.py
lecture/: 1.ipynb
