[project]
name = "5560-applied-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-lg",
    "fastapi[standard]>=0.136.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "spacy>=3.8.14",
    "uvicorn>=0.48.0",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
